--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
-    "ng2-search-filter": "^0.5.1",
+    "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
-    "smart-array-filter": "^4.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.3"
   },
