--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "angular-loading-bar": "^0.9.0",
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
