--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
+    "ngx-bootstrap": "^12.0.0",
     "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -34,7 +35,9 @@
     "@angular-devkit/build-angular": "^17.2.3",
     "@angular/cli": "~17.2.3",
     "@angular/compiler-cli": "^17.2.4",
+    "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.29",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
