--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
     "ngx-bootstrap": "^12.0.0",
+    "ngx-infinite-scroll": "^17.0.0",
     "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
