--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^17.2.4",
     "@angular/router": "^17.2.4",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
+    "@emailjs/browser": "^4.3.3",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "angular-loading-bar": "^0.9.0",
     "bootstrap": "^5.3.3",
